--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,19 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<input type="checkbox" id="mpclose" />
+<div class="mpfix">
+  <div class="mpbody">
+    <label for="mpclose">
+      <svg viewBox="0 0 320 512">
+        <path d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"></path>
+      </svg>
+    </label>
+    <a href="#">
+      <%= image_tag('lps_popup.jpeg', alt:"", width: "450px;") %>
+    </a>
+  </div>
+</div>
 <div id="page" class="site">
 	<div id="content" class="site-content">
 		<div class="hamroclass-main-wrapper">
@@ -248,6 +261,22 @@
 	<div id="hmc-scrollup" class="animated arrow-hide"><i class="fa fa-chevron-up"></i>
 	</div>
 </div><!-- #page -->
+
+<script type="text/javascript">
+    $(window).on('load', function() {
+        function alignModal(){
+        var modalDialog = $(this).find(".modal-dialog");
+        modalDialog.css("margin-top", Math.max(0, ($(window).height() - modalDialog.height()) / 2));
+    }
+    // Align modal when it is displayed
+    $(".modal").on("shown.bs.modal", alignModal);
+    $('#exampleModal').modal('show');
+    // Align modal when user resize the window
+    $(window).on("resize", function(){
+        $(".modal:visible").each(alignModal);
+    });
+    });
+</script>
 <style type="text/css">
 	div { box-sizing: border-box; }
 
@@ -319,5 +348,62 @@
 .elementor-heading-title.elementor-size-default{
 	margin-bottom: 20px !important;
 }
+
+.mpfix {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgb(0 0 0 / 66%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+      transition: all 300ms ease-in-out;
+      }
+      .mpfix > .mpbody {
+      max-width: 90%;
+      max-height: 90%;
+      position: relative;
+      }
+      .mpfix > .mpbody > a {
+      display: block;
+      box-shadow: 0 2px 5px rgba(0,0,0,.25);
+      border-radius: 4px;
+      overflow: hidden;
+      }
+      .mpfix > .mpbody > a > img {
+      max-width: 100%;
+      display: block;
+      }
+      label[for=mpclose] {
+      user-select: none;
+      height: 40px;
+      width: 40px;
+      text-align: center;
+      display: block;
+      position: absolute;
+      top: -20px;
+      right: -15px;
+      background: #fff;
+      border-radius: 40px;
+      padding: 5px;
+      box-sizing: border-box;
+      z-index: 1;
+      box-shadow: 0 2px 5px rgba(0,0,0,.25);
+      cursor: pointer;
+      }
+      label[for=mpclose] > svg {
+      height: 30px;
+      width: 30px;
+      fill: red;
+      }
+      #mpclose {
+      display: none;
+      }
+      #mpclose:checked + .mpfix {
+      left: -100%;
+      }
 
 </style>
