--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,21 +29,21 @@
 					    </ol>
 					    <div class="carousel-inner" role="listbox">
 					      <!-- Slide One - Set the background image for this slide in the line below -->
-					      <div class="carousel-item active" style='background-image: url("<%= asset_url('slide1.jpg')%>")'>
+					      <div class="carousel-item active" style='background-image: url("<%= asset_path('slide1.jpg') %>")'>
 					        <div class="carousel-caption d-none d-md-block">
 					          <!-- <h2 class="display-4">First Slide</h2> -->
 					          <!-- <p class="lead">This is a description for the first slide.</p> -->
 					        </div>
 					      </div>
 					      <!-- Slide Two - Set the background image for this slide in the line below -->
-					      <div class="carousel-item" style='background-image: url("<%= asset_url('slide2.jpg')%>")'>
+					      <div class="carousel-item" style='background-image: url("<%= asset_path('slide2.jpg')%>")'>
 					        <div class="carousel-caption d-none d-md-block">
 					          <!-- <h2 class="display-4">Second Slide</h2> -->
 					          <!-- <p class="lead">This is a description for the second slide.</p> -->
 					        </div>
 					      </div>
 					      <!-- Slide Three - Set the background image for this slide in the line below -->
-					      <div class="carousel-item" style='background-image: url("<%= asset_url('slide3.jpg')%>")'>
+					      <div class="carousel-item" style='background-image: url("<%= asset_path('slide3.jpg')%>")'>
 					        <div class="carousel-caption d-none d-md-block">
 					          <!-- <h2 class="display-4">Third Slide</h2> -->
 					          <!-- <p class="lead">This is a description for the third slide.</p> -->
