--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,6 +49,18 @@
 					          <!-- <p class="lead">This is a description for the third slide.</p> -->
 					        </div>
 					      </div>
+					      <div class="carousel-item" style='background-image: url("<%= asset_path('slide4.jpg')%>")'>
+					        <div class="carousel-caption d-none d-md-block">
+					          <!-- <h2 class="display-4">Third Slide</h2> -->
+					          <!-- <p class="lead">This is a description for the third slide.</p> -->
+					        </div>
+					      </div>
+					      <div class="carousel-item" style='background-image: url("<%= asset_path('slide5.jpg')%>")'>
+					        <div class="carousel-caption d-none d-md-block">
+					          <!-- <h2 class="display-4">Third Slide</h2> -->
+					          <!-- <p class="lead">This is a description for the third slide.</p> -->
+					        </div>
+					      </div>
 					    </div>
 					    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 					          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
