Added ne images

--- a/app/views/home/principal_message.html.erb
+++ b/app/views/home/principal_message.html.erb
@@ -13,7 +13,7 @@
                       <div class="elementor-element elementor-element-55c4b485 elementor-widget elementor-widget-image" data-id="55c4b485" data-element_type="widget" data-widget_type="image.default">
                         <div class="elementor-widget-container">
                           <div class="elementor-image">
-                            <img src="/assets/principal.jpg" class="attachment-full size-full" alt="" loading="lazy" width="332" height="331">											
+                            <img src="/assets/principal1.jpg" class="attachment-full size-full" alt="" loading="lazy" width="332" height="331">											
                           </div>
                         </div>
                       </div>
