--- a/app/views/home/founders.html.erb
+++ b/app/views/home/founders.html.erb
@@ -13,7 +13,7 @@
                       <div class="elementor-element elementor-element-55c4b485 elementor-widget elementor-widget-image" data-id="55c4b485" data-element_type="widget" data-widget_type="image.default">
                         <div class="elementor-widget-container">
                           <div class="elementor-image">
-                            <img src="/assets/manager1.jpg" class="attachment-full size-full" alt="" loading="lazy" width="332" height="331">                     
+                            <%= image_tag "manager.jpg", class: "attachment-full size-full", alt:"" %>
                           </div>
                         </div>
                       </div>
