--- a/app/views/home/fee_stracture.html.erb
+++ b/app/views/home/fee_stracture.html.erb
@@ -35,7 +35,7 @@
                                 <object data="<%= asset_path(@document.file.url) %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% else %>
-                                <object data="/assets/fees_structure.pdf" type="application/pdf" width="300" height="700">
+                                <object data="<%= asset_path('fees_structure.pdf')%>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% end %>
                             </div>
