--- a/app/views/home/faculty.html.erb
+++ b/app/views/home/faculty.html.erb
@@ -31,7 +31,7 @@
                         <div class="elementor-widget-container">
                           <div class="elementor-text-editor elementor-clearfix">
                             <div>
-                              <object data="/assets/staff_details.pdf" type="application/pdf" width="300" height="700">
+                              <object data="<%= asset_path('staff_details.pdf')%>" type="application/pdf" width="300" height="700">
                               </object>
                             </div>
                           </div>
