--- a/app/views/home/norms_of_fixing_fee.html.erb
+++ b/app/views/home/norms_of_fixing_fee.html.erb
@@ -35,7 +35,7 @@
                                 <object data="<%= asset_path(@document.file.url) %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% else %>
-                                <object data="/assets/CA_COMMITTEES_FOR_SCHOOL.pdf" type="application/pdf" width="300" height="700">
+                                <object data="<%= asset_path('last_3_years_annual_report.pdf') %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% end %>
                             </div>
