--- a/app/views/home/water_sanitation_certificate.html.erb
+++ b/app/views/home/water_sanitation_certificate.html.erb
@@ -35,7 +35,7 @@
                                 <object data="<%= asset_path(@document.file.url) %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% else %>
-                                <object data="/assets/water_sanitary_certificate.pdf" type="application/pdf" width="300" height="700">
+                                <object data="<%= asset_path('water_sanitary_certificate.pdf') %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% end %>
                             </div>
