--- a/app/views/home/affiliation_letter.html.erb
+++ b/app/views/home/affiliation_letter.html.erb
@@ -35,7 +35,7 @@
                                 <object data="<%= asset_path(@document.file.url) %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% else %>
-                                <object data="/assets/affiliation_letter.pdf" type="application/pdf" width="300" height="700">
+                                <object data="<%= asset_path('affiliation_letter.pdf') %>" type="application/pdf" width="300" height="700">
                                 </object>
                               <% end %>
                             </div>
